--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ h1{
     width:80px;
 }
 .secline{
-    background-image: url("/images/backg1.jpg");
+    background-image: url("/images/back.jpg");
     background-position:center;
     background-size: cover;
     height: 139px;;
